<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_item_poster"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/poster"
            android:src="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="@string/poster" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="20"
                android:maxLines="1"
                android:textColor="@color/black_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_item_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textColor="@color/black_light"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
                tools:layout_editor_absoluteX="16dp"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/style_rounded"
                android:backgroundTint="@color/yellow"
                android:padding="4dp"
                android:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="@+id/tv_item_overview"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_overview" />

            <TextView
                android:id="@+id/tv_item_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/style_rounded"
                android:backgroundTint="@color/green"
                android:padding="4dp"
                android:text="@string/vote"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/tv_item_rating"
                app:layout_constraintTop_toTopOf="@+id/tv_item_rating" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>